--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,3 +6,14 @@ body,
   margin: 0;
   padding: 0;
 }
+.el-breadcrumb{
+  margin-bottom: 15px;
+  font-size: 12px;
+}
+.el-card{
+  box-shadow: 0 0 0 .5;
+}
+.el-table{
+  margin-top: 15px;
+  font-size: 12px;
+}
